--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -104,11 +104,11 @@
         "description": "https://quay.io/repository/coreos/etcd?tab=tags",
     },
     {
-        "publicRegistry": "quay.io",
-        "publicRepo": "giantswarm/coredns:1.12.3",
-        "archive": "quay.io_giantswarm_coredns_1.12.3.tar",
+        "publicRegistry": "docker.io", // "quay.io",
+        "publicRepo": "coredns/coredns:1.12.4", // "giantswarm/coredns:1.12.4",
+        "archive": "quay.io_giantswarm_coredns_1.12.4.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "coredns/coredns:1.12.3",
+        "privateRepo": "coredns/coredns:1.12.4",
         "description": "https://hub.docker.com/r/coredns/coredns/tags, https://quay.io/repository/giantswarm/coredns?tab=tags",
     },
     {
