zot-deploy-vyos-container: upgrade image version, move vars into main

--- a/TerraformWorkShop/VyOS/Container-Zot/attachments/config-htpasswd.yaml
+++ b/TerraformWorkShop/VyOS/Container-Zot/attachments/config-htpasswd.yaml
@@ -7,8 +7,8 @@ extensions:
       updateInterval: "168h"
       # https://github.com/project-zot/zot/issues/2298#issuecomment-1978312708
       trivy:
-        javadbrepository: "zot.day0.sololab/aquasecurity/trivy-java-db" # ghcr.io/aquasecurity/trivy-java-db
-        dbrepository: "zot.day0.sololab/aquasecurity/trivy-db" # ghcr.io/aquasecurity/trivy-db
+        javadbrepository: "zot.vyos.sololab/aquasecurity/trivy-java-db" # ghcr.io/aquasecurity/trivy-java-db
+        dbrepository: "zot.vyos.sololab/aquasecurity/trivy-db" # ghcr.io/aquasecurity/trivy-db
   # Mgmt is enabled when the Search extension is enabled
   mgmt:
     enable: true
