oci-ops: upgrade image version, add vyos related image sync file

--- a/LocalWorkShop/Sync-OCIImage/VyOS.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/VyOS.jsonc
@@ -3,7 +3,7 @@
         "publicRegistry": "quay.io",
         "publicRepo": "fedora/fedora-coreos:42.20250901.3.0",
         "archive": "quay.io_fedora_fedora-coreos_42.20250901.3.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "fedora/fedora-coreos:42.20250901.3.0",
         "description": "https://quay.io/repository/fedora/fedora-coreos?tab=tags",
     },
@@ -11,7 +11,7 @@
         "publicRegistry": "quay.io",
         "publicRepo": "fedora/fedora-coreos:42.20250901.3.0",
         "archive": "quay.io_fedora_fedora-coreos_42.20250901.3.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "fedora/fedora-coreos:stable",
         "description": "https://quay.io/repository/fedora/fedora-coreos?tab=tags",
     },
@@ -19,7 +19,7 @@
         "publicRegistry": "quay.io",
         "publicRepo": "giantswarm/zot:v2.1.8",
         "archive": "quay.io_giantswarm_zot-v2.1.8.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "giantswarm/zot:v2.1.8",
         "description": "https://quay.io/repository/giantswarm/zot?tab=tags",
     },
@@ -27,31 +27,23 @@
         "publicRegistry": "docker.io",
         "publicRepo": "powerdns/pdns-auth-50:5.0.0",
         "archive": "docker.io_powerdns_pdns-auth-50_5.0.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "powerdns/pdns-auth-50:5.0.0",
         "description": "https://hub.docker.com/r/powerdns/pdns-auth-50",
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "fedora/postgresql-16:20250827",
-        "archive": "quay.io_fedora_postgresql-16_20250827.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "fedora/postgresql-16:20250827",
-        "description": "https://quay.io/repository/fedora/postgresql-16?tab=tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "sclorg/postgresql-16-c10s:20250827",
-        "archive": "quay.io_sclorg_postgresql-16-c10s_20250827.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "sclorg/postgresql-16-c10s:20250827",
+        "publicRepo": "sclorg/postgresql-16-c10s:20250912",
+        "archive": "quay.io_sclorg_postgresql-16-c10s_20250912.tar",
+        "privateRegistry": "zot.vyos.sololab.dev",
+        "privateRepo": "sclorg/postgresql-16-c10s:20250912",
         "description": "https://quay.io/repository/sclorg/postgresql-16-c10s?tab=tags",
     },
     {
         "publicRegistry": "quay.io",
         "publicRepo": "cockpit/ws:346",
         "archive": "quay.io_cockpit_ws_346.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "cockpit/ws:346",
         "description": "https://quay.io/repository/cockpit/ws?tab=tags",
     },
@@ -59,7 +51,7 @@
         "publicRegistry": "docker.io",
         "publicRepo": "sigoden/dufs:v0.45.0",
         "archive": "docker.io_sigoden_dufs_v0.45.0.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "sigoden/dufs:v0.45.0",
         "description": "https://hub.docker.com/r/sigoden/dufs/tags",
     },
@@ -67,56 +59,24 @@
         "publicRegistry": "docker.io",
         "publicRepo": "lldap/lldap:v0.6.2-alpine-rootless",
         "archive": "docker.io_lldap_lldap_v0.6.2-alpine-rootless.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "lldap/lldap:v0.6.2-alpine-rootless",
         "description": "https://hub.docker.com/r/lldap/lldap/tags",
-    },
-    {
-        "publicRegistry": "quay.io",
-        "publicRepo": "coreos/etcd:v3.6.4",
-        "archive": "quay.io_coreos_etcd_v3.6.4.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "coreos/etcd:v3.6.4",
-        "description": "https://quay.io/repository/coreos/etcd?tab=tags",
     },
     {
         "publicRegistry": "docker.io", // "quay.io",
         "publicRepo": "coredns/coredns:1.12.4", // "giantswarm/coredns:1.12.4",
         "archive": "quay.io_giantswarm_coredns_1.12.4.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "coredns/coredns:1.12.4",
         "description": "https://hub.docker.com/r/coredns/coredns/tags, https://quay.io/repository/giantswarm/coredns?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "library/traefik:v3.5.1",
-        "archive": "docker.io_library_traefik_v3.5.1.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "library/traefik:v3.5.1",
-        "description": "https://hub.docker.com/r/library/traefik/tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "traefik/whoami:v1.10",
-        "archive": "docker.io_traefik_whoami_v1.10.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "traefik/whoami:v1.10",
-        "description": "https://hub.docker.com/r/traefik/whoami/tags",
     },
     {
         "publicRegistry": "quay.io",
         "publicRepo": "navidys/prometheus-podman-exporter:v1.18.1",
         "archive": "quay.io_navidys_prometheus-podman-exporter_v1.18.1.tar",
-        "privateRegistry": "192.168.255.10:5000",
+        "privateRegistry": "zot.vyos.sololab.dev",
         "privateRepo": "navidys/prometheus-podman-exporter:v1.18.1",
         "description": "https://quay.io/repository/navidys/prometheus-podman-exporter?tab=tags",
-    },
-    {
-        "publicRegistry": "docker.io",
-        "publicRepo": "hectorm/nfs-ganesha:v9",
-        "archive": "docker.io_hectorm_nfs-ganesha_v9.tar",
-        "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "hectorm/nfs-ganesha:v9",
-        "description": "https://hub.docker.com/r/hectorm/nfs-ganesha/tags",
     },
 ]
