--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -41,11 +41,11 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "clivern/lynx:0.12.9",
-        "archive": "docker.io_clivern_lynx_0.12.9.tar",
+        "publicRepo": "leg100/otfd:0.4.1",
+        "archive": "docker.io_leg100_oftd_0.4.1.tar",
         "privateRegistry": "192.168.255.10:5000",
-        "privateRepo": "clivern/lynx:0.12.9",
-        "description": "https://hub.docker.com/r/clivern/lynx?tab=tags",
+        "privateRepo": "leg100/otfd:0.4.1",
+        "description": "https://hub.docker.com/r/leg100/otfd?tab=tags",
     },
     {
         "publicRegistry": "quay.io",
