fcos-deploy-butane: add image mirror registry for day0 vm

--- a/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/network.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day0-FCOS/Butane/network.yaml
@@ -37,5 +37,7 @@ storage:
       contents:
         inline: |
           [Resolve]
-          DNS=${domain_dns}
-          Domains=${domain}
+          DNS=${domain_vyos_dns}
+          Domains=${domain_vyos}
+          DNS=${domain_sololab_dns}
+          Domains=${domain_sololab}
