--- a/TerraformWorkShop/Quadlet/traefik-day0/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/attachments/values-sololab.yaml
@@ -31,11 +31,19 @@ traefik:
           forwardedHeaders:
             trustedIPs:
               - "0.0.0.0/0"
+          # https://blog.holtzweb.com/posts/HAProxy-Proxy-Protocol-on-OPNSense-to-Traefik/
+          # https://doc.traefik.io/traefik/reference/install-configuration/entrypoints/#proxyProtocol-trustedIPs
+          proxyProtocol:
+            trustedIPs:
+              - 192.168.255.1
         webSecure:
           address: ":443"
           forwardedHeaders:
             trustedIPs:
               - "0.0.0.0/0"
+          proxyProtocol:
+            trustedIPs:
+              - 192.168.255.1
       # certificatesResolvers:
       #   external:
       #     acme:
