coredns-config-vyos: separate internal and external ns server by port

--- a/TerraformWorkShop/Quadlet/coredns/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/coredns/attachments/values-sololab.yaml
@@ -38,6 +38,16 @@ coredns:
         - name: reload
         - name: log
     - zones:
+        - zone: vyos.sololab
+      port: 53
+      plugins:
+        - name: bind
+          parameters: "{{ .Values.coredns.hostIP }}"
+        - name: errors
+        - name: log
+        - name: forward
+          parameters: . 192.168.255.1
+    - zones:
         - zone: sololab
       port: 53
       plugins:
