vyos-ops-haproxy: add day1 services, let traefik trust haproxy proxy protocol

--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -33,11 +33,17 @@ traefik:
           forwardedHeaders:
             trustedIPs:
               - "0.0.0.0/0"
+          proxyProtocol:
+            trustedIPs:
+              - 192.168.255.1
         webSecure:
           address: ":443"
           forwardedHeaders:
             trustedIPs:
               - "0.0.0.0/0"
+          proxyProtocol:
+            trustedIPs:
+              - 192.168.255.1
       certificatesResolvers:
         external:
           acme:
