--- a/TerraformWorkShop/Quadlet/traefik-day0/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day0/attachments/values-sololab.yaml
@@ -1,5 +1,5 @@
 global:
-  imageRegistry: zot.day0.sololab:5000
+  imageRegistry: zot.vyos.sololab
 traefik:
   containerPorts: []
   # https://developer.hashicorp.com/terraform/enterprise/deploy/prepare-host#set-the-security-context-for-podman-on-rhel-and-selinux
