--- a/LocalWorkShop/SyncTo-Dufs/Day2.jsonc
+++ b/LocalWorkShop/SyncTo-Dufs/Day2.jsonc
@@ -3,8 +3,7 @@
         "publicRegistry": "https://releases.hashicorp.com",
         "publicRepo": "consul/1.21.4/consul_1.21.4_linux_amd64.zip",
         "archive": "consul_1.21.4_linux_amd64.zip",
-        "privateRegistry": "https://dufs.day0.sololab",
-        "privateRepo": "binaries/consul_1.21.4_linux_amd64.zip",
+        "privateRepo": "public/binaries/consul_1.21.4_linux_amd64.zip",
         "description": "https://releases.hashicorp.com/consul",
     },
     {
@@ -12,8 +11,7 @@
         "publicRegistry": "https://releases.hashicorp.com",
         "publicRepo": "nomad/1.10.4/nomad_1.10.4_linux_amd64.zip",
         "archive": "nomad_1.10.4_linux_amd64.zip",
-        "privateRegistry": "https://dufs.day0.sololab",
-        "privateRepo": "binaries/nomad_1.10.4_linux_amd64.zip",
+        "privateRepo": "public/binaries/nomad_1.10.4_linux_amd64.zip",
         "description": "https://releases.hashicorp.com/nomad",
     },
     {
@@ -21,8 +19,7 @@
         "publicRegistry": "https://releases.hashicorp.com",
         "publicRepo": "nomad-driver-podman/0.6.3/nomad-driver-podman_0.6.3_linux_amd64.zip",
         "archive": "nomad-driver-podman_0.6.3_linux_amd64.zip",
-        "privateRegistry": "https://dufs.day0.sololab",
-        "privateRepo": "binaries/nomad-driver-podman_0.6.3_linux_amd64.zip",
+        "privateRepo": "public/binaries/nomad-driver-podman_0.6.3_linux_amd64.zip",
         "description": "https://releases.hashicorp.com/nomad-driver-podman/",
     },
 ]
