consul-client-deploy-system: update server name, add comment

--- a/TerraformWorkShop/Quadlet/consul-client/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-client/attachments/values-sololab.yaml
@@ -1,8 +1,7 @@
 global:
   imageRegistry: zot.day0.sololab
 consul:
-  containerPorts:
-    []
+  containerPorts: []
     # - name: server
     #   containerPort: 8300
     #   hostPort: 8300
