traefik-config: remove consul service catalog constraints

--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -10,7 +10,7 @@ traefik:
     static:
       providers:
         consulCatalog:
-          constraints: "Tag(`host=day1`)"
+          # constraints: "Tag(`host=day1`)"
           endpoint:
             address: consul.service.consul:8501
             datacenter: dc1
