grafana-deploy-nomad-job: - move service block under task, use driver address_mode for health check, use host address_mode for consul service discovery; - add consul service tag, vyos haproxy config, ext/int dns record for ingress; - use env var for grafana config; - update vault oidc client url

--- a/TerraformWorkShop/Nomad/Jobs/grafana/attachments/grafana.ini
+++ b/TerraformWorkShop/Nomad/Jobs/grafana/attachments/grafana.ini
@@ -1,9 +1,10 @@
+# https://github.com/grafana/grafana/blob/v12.1.1/conf/defaults.ini
 [server]
 # The public facing domain name used to access grafana from a browser
-domain = grafana.service.consul
+#domain = grafana.day2.sololab
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-root_url = https://grafana.service.consul
+#root_url = https://grafana.day2.sololab
 
 [auth.generic_oauth]
 enabled = true
