--- a/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
+++ b/TerraformWorkShop/Hyper-V/VM-Day2-FCOS/Butane/nomad.yaml
@@ -158,7 +158,7 @@ systemd:
         [Unit]
         Description="Nomad Client Agent"
         Documentation=https://developer.hashicorp.com/
-        After=network-online.target prepare-nomad-binary.service
+        After=network-online.target prepare-nomad-binary.service podman.service
         Wants=network-online.target
         Requires=prepare-nomad-binary.service
         Wants=consul.service
@@ -180,7 +180,8 @@ systemd:
         ExecStart=/opt/bin/nomad agent \
           -config /etc/nomad.d/nomad.hcl
         # https://discuss.hashicorp.com/t/issue-with-nomad-service-restart-node-not-eligible-after-bash-script-execution/63723
-        ExecStartPost = /bin/bash -c "sleep $(shuf -i 30-40 -n 1) && /opt/bin/nomad node eligibility -enable -self"
+        ExecStartPost=/bin/bash -c "sleep $(shuf -i 30-40 -n 1) && /opt/bin/nomad node eligibility -enable -self"
+        ExecStop=/opt/bin/nomad node drain -enable -self
         KillMode=process
         KillSignal=SIGINT
         LimitNOFILE=65536
