traefik-ops-serversTransports: update day1 serversTransports name

--- a/TerraformWorkShop/Quadlet/vault/attachments/vault.traefik.yaml
+++ b/TerraformWorkShop/Quadlet/vault/attachments/vault.traefik.yaml
@@ -1,6 +1,6 @@
 http:
   serversTransports:
-    vault:
+    vault-day1:
       serverName: vault.day1.sololab
       rootcas:
         - "/etc/traefik/tls/ca.crt"
