--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -79,6 +79,14 @@ traefik:
               basicAuth:
                 users:
                   - admin:$apr1$/F5ai.wT$7nFJWh4F7ZA0qoY.JZ69l1
+      serversTransports.yaml:
+        http:
+          serversTransports:
+            consul-service:
+              serverName: wildcard.service.consul
+              rootcas:
+                - "/etc/traefik/tls/ca.crt"
+
   podLabels:
     # traefik.enable: true
     # traefik.http.routers.dashboard-redirect.entrypoints: web
