--- a/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
@@ -77,8 +77,8 @@ consul:
           address: https://vault.day1.sololab:8200
           ca_file: /consul/config/certs/ca.crt
           token: # set by terraform get data from vault secret
-          root_pki_path: pki-sololab_root
-          intermediate_pki_path: pki-sololab_consul
+          root_pki_path: pki-consul_root
+          intermediate_pki_path: pki-consul_int
           leaf_cert_ttl: 72h
           rotation_period: 2160h
           intermediate_cert_ttl: 8760h
