traefik-ops: rename serversTransports

--- a/TerraformWorkShop/Quadlet/nomad/attachments/nomad.traefik.yaml
+++ b/TerraformWorkShop/Quadlet/nomad/attachments/nomad.traefik.yaml
@@ -1,6 +1,6 @@
 http:
   serversTransports:
-    nomad-day1:
+    nomad:
       serverName: nomad.day1.sololab
       rootcas:
         - "/etc/traefik/tls/ca.crt"
