--- a/TerraformWorkShop/Quadlet/consul-server/attachments/consul.traefik.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/attachments/consul.traefik.yaml
@@ -1,6 +1,6 @@
 http:
   serversTransports:
-    consul-day1:
+    consul:
       serverName: consul.day1.sololab
       rootcas:
         - "/etc/traefik/tls/ca.crt"
