--- a/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/consul-server/attachments/values-sololab.yaml
@@ -69,21 +69,22 @@ consul:
       # log_level: trace
       # https://github.com/hashicorp/learn-consul-docker/blob/110bc9484b0dcd714e64604cd011a360d03b9bc6/datacenter-deploy-auto-config/vault/consul/server2.json#L33
       client_addr: "0.0.0.0"
+      # config in terraform consul provider instead
       # https://developer.hashicorp.com/consul/docs/reference/agent/configuration-file/service-mesh
-      connect:
-        enabled: true
-        ca_provider: vault
-        ca_config:
-          address: https://vault.day1.sololab:8200
-          ca_file: /consul/config/certs/ca.crt
-          token: # set by terraform get data from vault secret
-          root_pki_path: pki-consul_root
-          intermediate_pki_path: pki-consul_int
-          leaf_cert_ttl: 72h
-          rotation_period: 2160h
-          intermediate_cert_ttl: 8760h
-          private_key_type: rsa
-          private_key_bits: 2048
+      # connect:
+      #   enabled: true
+      #   ca_provider: vault
+      #   ca_config:
+      #     address: https://vault.day1.sololab:8200
+      #     ca_file: /consul/config/certs/ca.crt
+      #     token: # set by terraform get data from vault secret
+      #     root_pki_path: pki-consul_root
+      #     intermediate_pki_path: pki-consul_int
+      #     leaf_cert_ttl: 72h
+      #     rotation_period: 2160h
+      #     intermediate_cert_ttl: 8760h
+      #     private_key_type: rsa
+      #     private_key_bits: 2048
       datacenter: dc1
       encrypt: # set by terraform get data from vault secret
       ports:
